--- a/environment.yaml
+++ b/environment.yaml
@@ -1,18 +1,13 @@
 name: whisper
-# This file is part of stable-diffusion-webui (https://github.com/sd-webui/stable-diffusion-webui/).
 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
 
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 channels:
   - pytorch
   - defaults
-# Psst. If you change a dependency, make sure it's mirrored in the docker requirement
-# files as well.
+
 dependencies:
   - cudatoolkit=11.3
   - git
